feat: Add MCP Toolset support for agent configuration
Integrates Model Context Protocol (MCP) support into the Java Agent Development Kit by introducing the McpToolsetConfig. This allows agents to be configured with toolsets that communicate with MCP servers via stdio or SSE, expanding the range of tools agents can utilize. The update includes necessary configuration classes, Component Registry enhancements for toolset discovery, and LlmAgent modifications to load and use these toolsets. A new sample agent demonstrates configuring an McpToolset for file system operations.

PiperOrigin-RevId: 802355392